# bmypy

./: .gitignore  pyproject.toml
src/: bmypy.py
